--- a/resources/css/index.less
+++ b/resources/css/index.less
@@ -2,6 +2,30 @@
 .core-main-area {
     min-width: initial;
 }
+
+.core-side-panel {
+    height: 100%;
+    flex: 0 0 300px;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    .radio, .checkbox {
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .panel-body {
+        padding: 15px;
+        background-color: #f5f5f5;
+        .btn {
+            width: 100%;
+        }
+        .btn:not(:last-child) {
+            margin-bottom: 8px;
+        }
+    }
+}
+
+
 .core-main-view {
     display: flex;
     flex-direction: column;
@@ -31,20 +55,10 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding-right: 15%;
 
             > * { align-self: center; }
         }
         i { padding: 0 5px; }
-    }
-    .panel {
-        justify-content: flex-end;
-    }
-
-    .stats {
-        position: absolute;
-        top: 40px;
-        left: 40px;
     }
 
     .panel.latest-file {
