--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -13,7 +13,7 @@
         margin-top: 5px;
         margin-bottom: 5px;
     }
-    .panel-body {
+    .card-body {
         padding: 15px;
         background-color: #f5f5f5;
         .btn {
@@ -22,6 +22,12 @@
         .btn:not(:last-child) {
             margin-bottom: 8px;
         }
+    }
+    .card {
+        margin-bottom: 15px;
+    }
+    .form-group {
+        margin-bottom: 0;
     }
 }
 
@@ -44,14 +50,14 @@
         outline: none;
     }
 
-    .panel, .alert-info {
+    .card, .alert-info {
         width: 80%;
         padding: 40px;
         display: flex;
         justify-content: center;
         position: relative;
 
-        .panel-body {
+        .card-body {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -61,7 +67,7 @@
         i { padding: 0 5px; }
     }
 
-    .panel.latest-file {
+    .card.latest-file {
         padding: 10px 40px;
 
         .filename {
