Change to deprecation notice

--- a/resources/css/index.scss
+++ b/resources/css/index.scss
@@ -41,7 +41,7 @@
         outline: none;
     }
 
-    .card, .alert-info {
+    .card, .alert-info, .alert-warning {
         width: 80%;
         padding: 40px;
         display: flex;
